chore: clean up

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vvtt",
+  "name": "cloud-sleep",
   "type": "module",
   "version": "1.0.0",
-  "description": "VVTT is means Vite-Vue-Ts-Template :)",
+  "description": "☁️💤 cloud-sleep :)",
   "author": {
     "name": "JiatLn",
     "email": "lne128gene980@163.com"
