--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash-es": "^4.17.21",
     "pinia": "^2.0.21",
     "pinia-plugin-keep": "^0.3.0",
+    "socket.io-client": "^4.5.1",
     "unocss": "^0.45.13",
     "vue": "^3.2.37",
     "vue-router": "4"
